cmake_minimum_required(VERSION 3.22)
project(baekjoon)

set(CMAKE_CXX_STANDARD 14)

add_executable(cmake-build-debug_10865 10865.cpp)
add_executable(10886 10886.cpp)
add_executable(17548 17548.cpp)
add_executable(11586 11586.cpp)
add_executable(9443 9443.cpp)
add_executable(18883 18883.cpp)
add_executable(23811 23811.cpp)
add_executable(9838 15232.cpp)
add_executable(23810 23810.cpp)
add_executable(13528 13528.cpp)
add_executable(13484 13484.cpp)
add_executable(11795 11795.cpp)
add_executable(13222 13222.cpp)
add_executable(17010 17010.cpp)
add_executable(9950 9950.cpp)
add_executable(4714 4714.cpp)
add_executable(2083 2083.cpp)
add_executable(16427 16427.cpp)
add_executable(14782 14782.cpp)
add_executable(7595 7595.cpp)
add_executable(13225 13225.cpp)
add_executable(19774 19774.cpp)
add_executable(11772 11772.cpp)
add_executable(14656 14656.cpp)
add_executable(14182 14182.cpp)
add_executable(15295 15295.cpp)
add_executable(10406 10406.cpp)
add_executable(15354 15354.cpp)
add_executable(25305 25305.cpp)
add_executable(24479 24479.cpp)
add_executable(24480 24480.cpp)
add_executable(24444 24444.cpp)
add_executable(14445 24445.cpp)
add_executable(24445 24445.cpp)
add_executable(25326 25326.cpp)
add_executable(15819 15819.cpp)
add_executable(5576 5576.cpp)
add_executable(9076 9076.cpp)
add_executable(13771 13771.cpp)
add_executable(6996 6996.cpp)
add_executable(23278 23278.cpp)
add_executable(9946 9946.cpp)
add_executable(4631 4631.cpp)
add_executable(20977 20977.cpp)
add_executable(5602 5602.cpp)
add_executable(11931 11931.cpp)
add_executable(15688 15688.cpp)
add_executable(14729 14729.cpp)
add_executable(16212 16212.cpp)
add_executable(11292 11292.cpp)
add_executable(7596 7596.cpp)
add_executable(20362 20362.cpp)
add_executable(13240 13240.cpp)
add_executable(13617 13617.cpp)